--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
     "compilerOptions": {
         "composite": true,
-        "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
         "target": "es6",
         "useDefineForClassFields": true,
         "module": "ESNext",
         "skipLibCheck": true,
         "baseUrl": "./src",
         "paths": {
-            "@components/*": ["components/*"]
-            // "@helpers/*": ["utils/helpers/*"],
-            // "@types/*": ["utils/types/*"]
+            "@components/*": ["components/*"],
+            "@helpers/*": ["utils/helpers/*"]
         },
 
         /* Bundler mode */
@@ -28,5 +26,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
 }
